--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "build": "webpack",
     "start": "webpack serve --env port=3000",
     "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development"
+    "build:dev": "webpack --env mode=development",
+    "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix"
   },
   "keywords": [],
   "author": "Alekseev K.V.",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/eslint-parser": "^7.28.0",
+    "@eslint/js": "^9.33.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
@@ -20,16 +26,24 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "@typescript-eslint/eslint-plugin": "^8.39.1",
+    "@typescript-eslint/parser": "^8.39.1",
     "css-loader": "^6.6.0",
+    "eslint": "^9.33.0",
+    "eslint-config-eslint": "^11.0.0",
+    "eslint-plugin-react": "^7.37.5",
     "file-loader": "^6.2.0",
+    "globals": "^16.3.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.3",
+    "react-refresh": "^0.17.0",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.5.0",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
     "typescript": "^4.5.5",
+    "typescript-eslint": "^8.39.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
