--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint": "eslint src/",
-    "lint:fix": "eslint src/ --fix"
+    "lint:fix": "eslint src/ --fix",
+    "lint:scss": "stylelint \"**/*.scss\"",
+    "lint:scss:fix": "stylelint \"**/*.scss\" --fix"
   },
   "keywords": [],
   "author": "Alekseev K.V.",
@@ -31,6 +33,7 @@
     "css-loader": "^6.6.0",
     "eslint": "^9.33.0",
     "eslint-config-eslint": "^11.0.0",
+    "eslint-plugin-i18next": "^6.1.3",
     "eslint-plugin-react": "^7.37.5",
     "file-loader": "^6.2.0",
     "globals": "^16.3.0",
@@ -40,6 +43,8 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^16.23.1",
+    "stylelint-config-standard-scss": "^15.0.1",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "typescript": "^4.5.5",
