--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint:fix": "eslint src/ --fix",
     "lint:scss": "stylelint \"**/*.scss\"",
     "lint:scss:fix": "stylelint \"**/*.scss\" --fix",
-    "unit": "jest --config ./config/jest/jest.config.ts"
+    "unit": "jest --config ./config/jest/jest.config.ts",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "build-storybook": "storybook build -c ./config/storybook"
   },
   "keywords": [],
   "author": "Alekseev K.V.",
@@ -24,6 +26,8 @@
     "@babel/preset-typescript": "^7.27.1",
     "@eslint/js": "^9.33.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
+    "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
+    "@storybook/react-webpack5": "^9.1.3",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
@@ -43,6 +47,7 @@
     "eslint-config-eslint": "^11.0.0",
     "eslint-plugin-i18next": "^6.1.3",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-storybook": "^9.1.3",
     "file-loader": "^6.2.0",
     "globals": "^16.3.0",
     "html-webpack-plugin": "^5.5.0",
@@ -53,6 +58,7 @@
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "storybook": "^9.1.3",
     "style-loader": "^3.3.1",
     "stylelint": "^16.23.1",
     "stylelint-config-standard-scss": "^15.0.1",
