--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     branches: [ master ]
 jobs:
   pipeline:
-    runs-on: unbuntu-latest
+    runs-on: ${{ matrix.os}} 
     strategy:
       matrix:
         node-version: [ 22.x ]
