--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,15 @@ on:
     branches: [ master ]
 jobs:
   pipeline:
-    runs-on: ubuntu
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [ 22.x ]
     
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@4
       - name: Staring Node.js ${{ matrix.node-version}} 
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version}} 
       - name: install modules
