--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "baseUrl": ".",
     "paths": {
       "*": [
-        "./src/*"
+        "./src/**/*.ts",
+        "./src/**/*.tsx"
       ]
     }
   },
