--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx",
-    "src"
+    // "src"
   ],
   "ts-node": {
     "compilerOptions": {
