--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "webpack serve --env port=3000",
     "build:prod": "ts-node --transpile-only node_modules/webpack/bin/webpack.js --config webpack.config.ts --env mode=production",
     "build:dev": "webpack --env mode=development",
-    "lint": "eslint src/",
-    "lint:fix": "eslint src/ --fix",
+    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "stylelint \"**/*.scss\"",
     "lint:scss:fix": "stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
