--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     branches: [ master ]
 jobs:
   pipeline:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     strategy:
       matrix:
         node-version: [ 22.x ]
@@ -19,8 +19,6 @@ jobs:
           node-version: ${{ matrix.node-version}} 
       - name: install modules
         run: npm install --legacy-peer-deps
-      - name: install ts-node for webpack config
-        run: npm install ts-node tsconfig-paths --save-dev --legacy-peer-deps
       - name: build production project
         run: npm run build:prod
       - name: linting typescript
