--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx",
-    // "src"
+    "**/*.ts",
+    "**/*.tsx",
+    "./webpack.config.ts"
   ],
   "ts-node": {
     "compilerOptions": {
