--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version}} 
       - name: install modules
-        run: npm install --legacy-peer-deps
+        run: npm ci --legacy-peer-deps
       - name: build production project
         run: npm run build:prod
       - name: linting typescript
