--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,14 @@
     }
   },
   "include": [
+    "src/**/*",
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx",
     "**/*.ts",
     "**/*.tsx",
-    "./webpack.config.ts"
+    "webpack.config.ts",
+    "config/**/*"
   ],
   "ts-node": {
     "compilerOptions": {
