--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve --env port=3000",
-    "build:ts": "tsc",
-    "build:prod": "npm run build:ts && webpack --env mode=production",
+    "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
