--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-eslint": "^11.0.0",
     "eslint-plugin-i18next": "^6.1.3",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^9.1.3",
     "file-loader": "^6.2.0",
     "globals": "^16.3.0",
