--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/eslint-parser": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@eslint/compat": "^1.3.2",
     "@eslint/js": "^9.33.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "@storybook/addon-webpack5-compiler-swc": "^3.0.0",
