--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^1.11.0",
     "concurrently": "^9.2.1",
