--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^12.1.3",
+    "@types/circular-dependency-plugin": "^5.0.8",
     "@types/jest": "^30.0.0",
     "@types/node": "^17.0.21",
     "@types/react": "^18.0.17",
@@ -46,6 +47,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "circular-dependency-plugin": "^5.2.2",
     "css-loader": "^6.6.0",
     "eslint": "^9.33.0",
     "eslint-config-eslint": "^11.0.0",
