--- a/package.json
+++ b/package.json
@@ -82,7 +82,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@react-spring/web": "^9.5.2",
     "@reduxjs/toolkit": "^1.8.0",
+    "@use-gesture/react": "^10.2.19",
     "axios": "^1.11.0",
     "concurrently": "^9.2.1",
     "i18next": "^21.9.0",
