--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^9.1.3",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "file-loader": "^6.2.0",
     "globals": "^16.3.0",
     "html-webpack-plugin": "^5.5.0",
@@ -87,6 +88,7 @@
     "@use-gesture/react": "^10.2.19",
     "axios": "^1.11.0",
     "concurrently": "^9.2.1",
+    "eslint-plugin-import": "^2.32.0",
     "i18next": "^21.9.0",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
