--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@headlessui/react": "^1.6.6",
     "@react-spring/web": "^9.5.2",
     "@reduxjs/toolkit": "^1.8.0",
+    "@storybook/addon-themes": "^10.0.8",
     "@use-gesture/react": "^10.2.19",
     "axios": "^1.11.0",
     "concurrently": "^9.2.1",
