--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint:scss": "stylelint \"**/*.scss\"",
     "lint:scss:fix": "stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "test:e2e": "cypress open",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "build-storybook": "storybook build -c ./config/storybook",
     "prepare": "husky"
@@ -49,6 +50,7 @@
     "@typescript-eslint/parser": "^8.39.1",
     "circular-dependency-plugin": "^5.2.2",
     "css-loader": "^6.6.0",
+    "cypress": "^11.0.0",
     "eslint": "^9.33.0",
     "eslint-config-eslint": "^11.0.0",
     "eslint-plugin-i18next": "^6.1.3",
