--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "json-server": "^0.17.0",
     "loki": "^0.35.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "prettier": "3.7.1",
     "react-refresh": "^0.17.0",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.49.9",
