--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.3",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "ts-morph": "^16.0.0"
   },
   "loki": {
     "configurations": {
